--- a/ubi-echo/Dockerfile
+++ b/ubi-echo/Dockerfile
@@ -1,4 +1,4 @@
 FROM registry.access.redhat.com/ubi8/ubi:8.0
 USER 1002
-CMD bash -c "while true; do (( i++ )); echo testing ${i}; sleep 10; done"
+CMD bash -c 'while true; do (( i++ )); echo "testing ${i}"; sleep 10; done"
 
